# mooshlif

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  README.ru.md  docker-compose.gpu.yml  docker-compose.yml  install.sh  pyproject.toml  requirements.txt
app/backend/: dzi.py  main.py  worker.py
app/frontend/: index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
app/frontend/src/: App.tsx  main.tsx
app/frontend/src/api/: client.ts  types.ts
app/frontend/src/components/: EcdChart.tsx  Header.module.css  Header.tsx  NewAnalysisModal.module.css  NewAnalysisModal.tsx  OsdViewer.module.css  OsdViewer.tsx  ui.module.css  ui.tsx
app/frontend/src/hooks/: useHealth.ts  useProgress.ts  useUploads.ts
app/frontend/src/lib/: format.ts
app/frontend/src/pages/: AnalysisPage.module.css  AnalysisPage.tsx  AnnotatePage.module.css  ListPage.tsx  (+4 more)
docs/: FINDINGS_TRIAGE.md  PROVENANCE.md  RESEARCH_NOTES.md  SCIENCE_NOTES.md  api_contract.md  research_catalog.json  science_catalog.json
models/: intergrowth_ensemble.pkl  intergrowth_gbm.pkl  talc_calibration.json  talc_calibration.json.v1_backup  talc_ref_stats.json  talc_vote_lr.pkl
scripts/: calibrate_talc.py  check_org_reference.py  compare_intergrowth_features.py  extract_features.py  optimize_rule.py  quantify_talc.py  report_from_signals.py  selftrain_talc.py  train_talc.py  validate_classification.py
shlifscan/: __init__.py  classify.py  cli.py  config.py  embeddings.py  imio.py  intergrowth.py  pipeline.py  preprocess.py  report.py  segment.py  stereology.py  talc.py  visualize.py
(+1 files in other folders)
